crates/openehr-serde/tests/snapshots/full_rm_canonical_json__MESSAGE.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "MESSAGE",
  "author": {
    "_type": "PARTY_SELF"
  },
  "audit": {
    "_type": "AUDIT_DETAILS",
    "system_id": "ehrbase.example.org",
    "time_committed": {
      "_type": "DV_DATE_TIME",
      "value": "2026-07-02T10:00:00Z"
    },
    "change_type": {
      "_type": "DV_CODED_TEXT",
      "value": "creation",
      "defining_code": {
        "_type": "CODE_PHRASE",
        "terminology_id": {
          "_type": "TERMINOLOGY_ID",
          "value": "openehr"
        },
        "code_string": "249"
      }
    },
    "committer": {
      "_type": "PARTY_SELF"
    }
  },
  "content": {
    "_type": "SYNC_EXTRACT_REQUEST",
    "name": {
      "_type": "DV_TEXT",
      "value": "sync extract request"
    },
    "archetype_node_id": "openEHR-EHR-SYNC_EXTRACT_REQUEST.sample.v1",
    "specification": {
      "_type": "SYNC_EXTRACT_SPEC",
      "includes_versions": true
    }
  }
}
