crates/openehr-serde/tests/snapshots/full_rm_canonical_json__OBJECT_REF.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "OBJECT_REF",
  "namespace": "local",
  "type": "EHR",
  "id": {
    "_type": "HIER_OBJECT_ID",
    "value": "7d44b88c-4199-4bad-97dc-d78268e01398"
  }
}
