crates/openehr-serde/tests/snapshots/full_rm_canonical_json__OBSERVATION.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "OBSERVATION",
  "name": {
    "_type": "DV_TEXT",
    "value": "Blood pressure"
  },
  "archetype_node_id": "openEHR-EHR-OBSERVATION.blood_pressure.v2",
  "language": {
    "_type": "CODE_PHRASE",
    "terminology_id": {
      "_type": "TERMINOLOGY_ID",
      "value": "ISO_639-1"
    },
    "code_string": "en"
  },
  "encoding": {
    "_type": "CODE_PHRASE",
    "terminology_id": {
      "_type": "TERMINOLOGY_ID",
      "value": "IANA_character-sets"
    },
    "code_string": "UTF-8"
  },
  "subject": {
    "_type": "PARTY_SELF"
  },
  "data": {
    "_type": "HISTORY",
    "name": {
      "_type": "DV_TEXT",
      "value": "data"
    },
    "archetype_node_id": "at0001",
    "origin": {
      "_type": "DV_DATE_TIME",
      "value": "2026-07-02T10:00:00Z"
    }
  }
}
