crates/openehr-serde/tests/snapshots/full_rm_canonical_json__PARTICIPATION.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "PARTICIPATION",
  "function": {
    "_type": "DV_TEXT",
    "value": "nurse"
  },
  "performer": {
    "_type": "PARTY_SELF"
  }
}
