crates/openehr-serde/tests/snapshots/full_rm_canonical_json__PARTY_IDENTIFIED.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "PARTY_IDENTIFIED",
  "name": "Dr. A. Jansen"
}
