crates/openehr-serde/tests/snapshots/full_rm_canonical_json__PARTY_IDENTITY.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "PARTY_IDENTITY",
  "name": {
    "_type": "DV_TEXT",
    "value": "legal name"
  },
  "archetype_node_id": "at0002",
  "details": {
    "_type": "ITEM_TREE",
    "name": {
      "_type": "DV_TEXT",
      "value": "details"
    },
    "archetype_node_id": "at0003"
  }
}
